//
//  CatgeoriesCosmetics.swift
//  Cosmebem
//
//  Created by Beatriz Carlos on 23/08/20.
//  Copyright © 2020 Beatriz Carlos. All rights reserved.
//

import Foundation

let categories: [String] = ["Blush", "Bronzer", "Eyebrow", "Eyeliner", "Foundation", "Lipstick", "Mascara"]
let findName: [String] = ["blush", "bronzer", "eyebrow", "eyeliner", "foundation", "lipstick", "mascara"]
let descriptionType: [String] = [
    "The blush can restore naturalness to a skin that has been worked with foundation, concealer and powder. Blush can also be used to shape the face, enhance the bone structure and its best features.",
    "The bronzer besides being used to tan the skin, it is also great to give more symmetry to the face, smoothing imperfections.",
    "The eyebrows are responsible for much of the expression of the look and make any makeup more amazing when they are highlighted in the right way.",
    "The eyeliner is a cosmetic product used to enhance the eyes, used in the contour of them.",
    "The foundation provides a natural finish, light coverage, uniform and matte effect.",
    "Lipstick is a cosmetic used to color the lips. With or without shine, it enhances the mouth and is available in various colors and brands, adapting to different tastes.", "The eyelash mask is one of the most beloved makeup items. In addition to highlighting the look, several proposals are proposed to lengthen the strands, add volume, bend or all of the previous alternatives."
]
