...
    let description: String
    let image: UIImage?
    let endpoint: String
}

var tags: [Tag] = [
    Tag(name: "Hypoallergenic", description: "Hypoallergenic cosmetics are products that manufacturers claim produce fewer allergic reactions than other cosmetic products.", image: UIImage(named: "hypoallergenic-black"), endpoint: "Hypoallergenic"),
    
    Tag(name: "Organic", description: "The organic cosmetic is a product formulated and produced with certified natural ingredients. Every product is produced within the principles of sustainability, as it is ecologically correct and socially fair.", image: UIImage(named: "vegan-black"), endpoint: "Vegan"),
    
    Tag(name: "Alcohol free", description: "Some consumers select alcohol free products because they believe ethyl alcohol dries out their skin or hair.In cosmetic labeling, the term alcohol, used by itself, refers to ethyl alcohol.", image: UIImage(named: "alcohol-black"), endpoint: "alcohol+free"),
    
    Tag(name: "Oil free", description: "Oil-free cosmetics are products that do not contain fatty ingredients. The removal reduces the overall oiliness of the product, reducing the chance of pore clogging.", image: UIImage(named: "oil-black"), endpoint: "oil+free"),
...
